# tensorpack_f

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  GeometricRules.py  LICENSE  MANIFEST.in  README.md  __init__.py  alice_license.jwt  base_classes.pyx  binary.py  connection.py  convertto.c  convertto.py  convertto.pyx  dcc.py  dccp.py  entity_extraction.pyx  export_connections_to_json.py  featureextract.py  generate_jwt.py  graph.c  graph.pyx  hyperdim_conn.py  json_handler.py  license.py  license_manager.py  load.py  load_json_files.c  load_json_files.py  logic_gate_rules.py  matrixtransformer.py  matrixtransformer.pyx  matrixtransfromer_attention.py  metrics.py  ocr_integration.c  ocr_integration.py  ocr_integration.pyx  pathway_confidence_analysis.ipynb  (+16 more)
data/: README.md  subset_object_Plasmablasts_subcluster.tsv  subset_object_Stromal_subcluster.tsv  subset_object_T_cells_subcluster.tsv  validation_report.txt
docs/: dc_return-structure.md  license_spec.md  parquet_handler.py  tg_return_structure.md
examples/: bridge_results.json  connections.json  entity_search_results.json
scripts/: run_dcc_on_samples.py
tensorpack/: __init__.py  __main__.py  _decode_text_from_dataset.c  _decode_text_from_dataset.py  _decode_text_from_dataset.pyx  base.c  base.pyx  base_classes.c  cli.py  convertto.py  entity_extraction.c  entity_extraction.py  graph.py  graph.pyx  license_manager.c  license_manager.py  license_manager.pyx  load_json_files.py  load_json_files.pyx  matrixtransformer.py  matrixtransformer.pyx  script.py  script.pyx
test_data/: polygon_data.csv  (+4 more)
(+37 files in other folders)
